<resources>
    <string name="app_name">MediAlerta</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="alertas">Alertas</string>
    <string name="contatos">Contatos</string>
    <string name="sos">SOS</string>
    <string name="novo_alerta">Novo Alerta</string>
    <string name="lembrete">lembrete</string>
    <string name="nome_do_medicamento">Nome do Medicamento</string>
    <string name="qtd">Qtd.</string>
    <string name="minuto">Minuto</string>
    <string name="hora">Hora</string>
    <string name="salvar">Salvar</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="nova_foto">Tentar Novamente</string>
    <string name="confirmar">Confirmar</string>
    <string name="imagem_do_medicamento">Imagem do medicamento</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="sim">Sim</string>
</resources>
