<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="412dp"
        android:layout_height="601dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="409dp"
        android:layout_height="609dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPhoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/btnPhoto"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="124dp"
        android:layout_height="75dp"
        android:layout_marginBottom="36dp"
        android:text="@string/tirar_foto"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConfirm"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="145dp"
        android:layout_height="74dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/confirmar"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnNewPhoto"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="155dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="44dp"
        android:text="@string/nova_foto"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/design_default_color_error"
        android:textColor="@color/design_default_color_on_primary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnPhoto"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
